# sol_goal

./: .gitignore  Anchor.toml  README.md
app/: package-lock.json  package.json
programs/sol_goal/: Cargo.toml
programs/sol_goal/src/: lib.rs
tests/: sol_goal_tmp.ts
